--- a/styles/style.css
+++ b/styles/style.css
@@ -242,3 +242,10 @@ h1, h2 {
         margin: 0 0 15px 0; 
     }
 }
+
+.header-image img {
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: cover;
+}
