--- a/styles/style.css
+++ b/styles/style.css
@@ -35,8 +35,10 @@ h1, h2 {
 }
 
 .logo {
-    font-size: 1.8rem;
+    font-size: 2.4rem;
     color: #FF5A5F;
+    text-align: center;
+    flex: 1;
 }
 
 .user-nav {
@@ -245,7 +247,7 @@ h1, h2 {
 
 .header-image img {
     width: 100%;
-    height: auto;
+    height: 250px;
     display: block;
     object-fit: cover;
 }
